# jar-lang

./: .gitignore  README.md  pyproject.toml
jar/: __init__.py  builtins.py  interpreter.py  lexer.py  main.py  parser.py
tests/: __init__.py  test_interpreter.py  test_lexer.py
